# DeviceGuard-zygisk

./: module.prop
.github/workflows/: build.yml
module/: build.gradle.kts
module/src/main/cpp/: CMakeLists.txt  companion.cpp  zygisk.cpp
